<resources>
    <string name="app_name">Android Labs</string>
    <string name="widgets">Here are my widgets:</string>
    <string name="ButtonText">Login</string>
    <string name="check">Check this out!</string>
    <string name="Switch">Switch on / off</string>
    <string name="hint">Type your answer here</string>

    //** lab3 **//

    <string name="Lab3TextView1">Enter your email address:</string>
    <string name="Lab3TextView2">Enter your password:</string>
    <string name="Lab3EmailHint">Type email here:</string>
    <string name="Lab3LoginBtnText">Login</string>
    <string name="ProfileText">Your profile</string>
    <string name="NameText">Your name:</string>
    <string name="NameHintText">Enter your name</string>
    <string name="EmailTextViewText">Your email:</string>
    <string name="EmailHintText">Enter your email</string>
    <string name="PictureTextView">Your picture:</string>
    <string name="ImagePictureTextView">Click the button above to take a picture</string>
    <string name="GoToChatText">Go To Chat</string>
    <string name="SendText">Send</string>
    <string name="ReceiveText">Receive</string>
    <string name="ChatHint">Type here</string>
</resources>
